src/test/ui/compare-method/proj-outlives-region.stderr
error[E0276]: impl has stricter requirements than trait
  --> $DIR/proj-outlives-region.rs:9:5
   |
LL |     fn foo() where T: 'a;
   |     --------------------- definition of `foo` from trait
...
LL |     fn foo() where U: 'a { }
   |     ^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `U: 'a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0276`.
